--- a/content/notes/essay/2025/第一篇笔记测试.mdx
+++ b/content/notes/essay/2025/第一篇笔记测试.mdx
@@ -14,7 +14,7 @@ front-matter
 ```mdx title="\content\notes\essay\2025\第一篇笔记测试.mdx"
 ---
 title: 第一篇笔记测试
-description: 测试
+description: 笔记层级结构、排版部署测试
 slug: "essay/2025/202512100827"
 publishedAt: 2025-12-10
 lastUpdated: 2025-12-10
