--- a/content/notes/demo/demo.mdx
+++ b/content/notes/demo/demo.mdx
@@ -3,6 +3,7 @@ title: Demo
 description: 效果展示
 publishedAt: 2025-12-07
 lastUpdated: 2025-12-09
+tags: [技术, 前端, React]
 ---
 
 import { Accordion, Accordions } from 'fumadocs-ui/components/accordion';
