--- a/content/notes/demo/index.mdx
+++ b/content/notes/demo/index.mdx
@@ -16,6 +16,25 @@ import { HomeIcon } from 'lucide-react';
 import { GraphView } from '@/components/graph-view';
 import { buildGraph } from '@/lib/build-graph';
 
+
+
+## 目录结构
+
+
+```json title="\content\notes\demo"
+{
+  "title": "Demo",
+  "root": true,
+  "pages": [
+    "index",
+    "---分隔内容---",
+    "demo-1",
+    "demo-2",
+    "demo-3"
+  ]
+}
+```
+
 ## 导入所有组件
 
 ```ts
@@ -40,21 +59,6 @@ import { Banner } from 'fumadocs-ui/components/banner';
 ```
 
 当有横幅时，不管横幅在哪个位置，都会挤占 nav 的空间
-
-## 目录结构
-
-
-```json title="\content\notes\demo"
-{
-  "title": "Demo",
-  "root": true,
-  "pages": [
-    "index",
-    "---导航分类---",
-    "demo"
-  ]
-}
-```
 
 ## 内联目录
 
