--- a/content/notes/essay/2025/第一篇笔记测试.mdx
+++ b/content/notes/essay/2025/第一篇笔记测试.mdx
@@ -7,42 +7,26 @@ lastUpdated: 2025-12-10
 tags: [测试]
 ---
 
-## 层级结构
+## 中文排版
 
-front-matter
+从外部其实项固平凡；许多义务此等保卫散？出口整天反应是，能吐出是之。代表苦笑必要戴：魔着这农民！原的才和这个把，于是加上一符。文化里之一这叫的米、日益邀请胎似的：他两？了却品内容着，米使了把痛苦的去。
 
+上办法大树利用属间没有，心人员藏族和说给！附近成功发挥的说明取消新地个！脚步姑娘的彼一切——和要在有脏！都通入里你全脖子出第二，不气氛牧草作为又。别人劳动在进去有些：年好程度。惊喜几有的就水肿中严厉，长站！经验的语言学，支配重大系统论，教会。
 
-```mdx title="\content\notes\essay\2025\第一篇笔记测试.mdx"
----
-title: 第一篇笔记测试
-description: 笔记层级结构、排版部署测试
-slug: "essay/2025/202512100827"
-publishedAt: 2025-12-10
-lastUpdated: 2025-12-10
----
-```
+## 英文排版
 
-可关闭上一页、下一页、目录
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis labore vitae beatae ab ad architecto exercitation enim est vero eos consectetur. Pariatur nemo beatae dolor voluptate non vitae tempor eaque consectetur labore. 
 
-```
-toc: false
-footer: false
-```
+Excepteur eaque ipsum consectetur aspernatur quis non accusantium pariatur explicabo aut doloremque sunt anim nemo! 
+
+Occaecat deserunt esse rem odit sint id lorem non! Velit aperiam vitae lorem lorem laboris proident sed veniam anim sit voluptas duis vitae nemo officia. Eiusmod eaque labore quia et laborum quae aliquip at proident ullamco aut aute aspernatur aperiam sint id. Ut lorem rem duis ipsum dolore sed anim ipsum.
+
+## 中日英排版
+
+一個 管理 元件 優化 系統 載入 優化 版本 網頁 text interface technology 技術! 介面 工具 digital 互動 purposes 排版 一個 標點 is 中文 る。そうして、この門の上へ experience encrypt 持って来て、犬のように棄てられてしまうばかりである。選ばないとすれば――下人の考えは、何度も同じ道を低徊て experience encryption purposes function function transmission content 授權! 
+
+「盗人ぬすびとになるよりほかに仕方がない」と云う事を、積極的に肯定するだけの、勇気が出ずにいたのである this 效率 module over 維護 介面 這是 feature に仕方がない」と云う事を、積極的に肯定す 句子 執行 一個 字符 experience 互動 系統 server? Module mobile processing over 展示 專業 展示 application fox jumps 使用者 mobile 字符 solution 資訊.
 
 
-meta.json
 
-```json title="content\notes\essay\2025"
-{
-  "pages": [
-    "essay/2025/202512100827"
-  ]
-}
-```
-
-## 排版
-
-Software 排版 user 維護 維護 創新 client modern 處理 修復 元件 management over 服務 加密 操作 段落 fox 加密 responsive! Innovation 加密 載入 系統 句子 回應 驗證 application transmission 一個 service testing 文字 專業 升級 資料 處理 回應 application dog. 字符 體驗 modern 服務 字符 innovation digital 應用. 展示 測試 詞語 database application server 功能 digital 工具 字符 modern data technology library analysis 排版.
-
-Brown 漢字 展示 design data 解決 lazy 介面 digital client 工具 介面 字符 設計 體驗 framework? 展示 元件 management library this 創新 載入 發布 transmission 授權 management 網頁 設計 除錯 擴展 storage processing 測試 optimization. 回應 the server 效果 system 優化 security 句子 控制 分析 升級 database 擴展 authentication.
-
+[example](https://example.com)
