--- a/content/notes/essay/2025/fumadocs-调整内容记录.mdx
+++ b/content/notes/essay/2025/fumadocs-调整内容记录.mdx
@@ -1,8 +1,8 @@
 ---
 title: fumadocs 调整内容记录
 slug: "essay/2025/202512100827"
-publishedAt: 2025-12-10
-lastUpdated: 2025-12-10
+publishedAt: 2025-12-11
+lastUpdated: 2025-12-11
 tags: [效果展示]
 toc: false
 ---
@@ -15,4 +15,4 @@ toc: false
 - 字体：拆分成独立的 css，导入global.css
 - 目录：拆分成独立的 css，导入 global.css
 - 代码块：拆分成独立的 css，导入 global.css
-
+- url
