--- a/content/notes/essay/2025/2025-12-11-中文url访问测试.mdx
+++ b/content/notes/essay/2025/2025-12-11-中文url访问测试.mdx
@@ -1,29 +1,17 @@
 ---
 title: "中文 URL 访问测试"
 description: 验证静态导出后中文路径配合目录解码脚本的可访问性
-tags: ['中文 url']
-publishedAt: 2025-12-11
+tags: ['测试']
+publishedAt: 2025-12-12
 ---
 
-> 目的：这篇文章用于验证「静态导出 + 目录解码」方案在中文 URL 场景下是否正常可访问。构建后目录会先被 URL 编码，再由 `scripts/decode-paths.js` 还原为中文目录。
+> 目的：这篇文章用于验证「静态导出 + 目录解码」方案在中文 URL 场景下是否正常可访问。构建后目录会先被 URL 编码，再由 decode-paths.js 还原为中文目录。
 
 ## 访问路径说明
 
 - 预期线上访问地址（部署到 `/memos`）：`/memos/notes/essay/中文url访问测试/`
 - 构建时 Next 导出会生成 `%E4%B8%AD%E6%96%87url%E8%AE%BF%E9%97%AE%E6%B5%8B%E8%AF%95/` 目录
 - `postbuild` 自动运行 `scripts/decode-paths.js`，将上述目录重命名为中文目录，静态托管时即可命中
-
-## 检查清单
-
-1. 本地 `npm run build`（会自动执行 `postbuild`）  
-2. 查看 `out/notes/essay/中文url访问测试/` 是否存在 `index.html`  
-3. 部署 `out` 到 `/memos`，访问中文 URL，确认不再 404  
-
-## 额外说明
-
-- 不需要在 frontmatter 写 ASCII slug，本例故意保留中文文件名与中文 URL，用于验证解码脚本。
-- 若未来想要稳定的英文短链，可在 frontmatter 添加 `slug: essay/zh-url-test`，那就无需依赖解码脚本。
-
 
 ## 代码
 
@@ -67,3 +55,14 @@ console.log('中文目录解码完成');
     "postinstall": "fumadocs-mdx"
   },
 ```
+
+## 检查清单
+
+* [x] 本地 `npm run build`（会自动执行 `postbuild`）  
+* [x] 查看 `out/notes/essay/中文url访问测试/` 是否存在 `index.html`  
+* [x] 部署 `out` 到 `/memos`，访问中文 URL，确认不再 404  
+
+## 额外说明
+
+<dd>本例故意保留中文文件名与中文 URL，用于验证解码脚本。</dd>
+<dd>可在 frontmatter 添加 `slug: essay/zh-url-test`，那就无需依赖解码脚本。</dd>
